fixed the hamburger button z-index

--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@ canvas {
   top: 0;
   left: 0;
 }
+
+.navbar {
+
+    z-index: 1000;
+    position: relative;
+}
